Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.10.0
-
None
Description
When dropping a table with a failed tablet, the tablet will fail to be deleted. The /tablets endpoint shows its Last Status as: Invalid argument: Unable to delete on-disk data from tablet 2e3b95dba81044748a9a52eb138dd59c: The metadata for tablet 2e3b95dba81044748a9a52eb138dd59c still references orphaned blocks. Call DeleteTabletData() first
Steps to repro:
1. Create a table with a single tablet, single replica.
2. Load enough data to have the WAL roll a segment
3. Corrupt the magic bytes of a non-current segment
4. Restart the TS
5. Drop the table